# Abyssal-Station

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
.github/instructions/: ai.instructions.md  collisions.instructions.md  core.instructions.instructions.md  input.instructions.instructions.md  items_puzzles.instructions.md  player.instructions.md  save_config.instructions.md  scene.instructions.instructions.md  ui.instructions.md
.github/prompts/: ai-improvement.prompt.md  collision-status.md.prompt.md  docs-fix.prompt.md  fixes.prompt.md  gameplay-improvements.prompt.md  input-improvements.prompt.md  mainmenu.prompt.md  mejoras-fixes.prompt.md  option-pause-fix.prompt.md  player-ai.prompt.md  scene-integration.prompt.md  scene-update.prompt.md
assets/: README.md
docs/: IMPLEMENTATION_PLAN_SURVIVAL_SYSTEMS.md  PROJECT_SUMMARY.md  README.md  RECENT_IMPROVEMENTS_SUMMARY.md  ai-implementation-complete.md  ai-improvement-implementation.md  ai-status.md  bug_fix_summary.md  changelog_docs_unify_20250824.md  collision-status.md  collision_system_cleanup.md  core-status.md  entities-improvements-implementation.md  entities-status.md  gameplay-status.md  implementation_changes_summary.md  input-improvements-implementation.md  input-status.md  mejoras-implementation-summary.md  option-menu-fix.md  scene-status.md  ui-status.md
docs/archive/: ai-status.md  collision-improvements-implementation.md  collision-status.md  core-status.md  gameplay-improvements-implementation.md  ui-implementation.md  ui-status.md
docs/integration/: IMPLEMENTATION_COMPLETE.md  README.md  feature-complete-scene.md  scene-implementation-checklist.md  scene-system-implementation.md
docs/modules/: AI.md  Collisions.md  Core.md  Entities.md  Gameplay.md  Input.md  README.md  Scene.md  UI.md  ai_module_changes.md  core_module_changes.md  input_module_changes.md  other_modules_changes.md  ui_module_changes.md
src/: main.cpp
src/ai/: AIManager.cpp  AIManager.h  AIState.cpp  AIState.h  AISystem.cpp  AISystem.h  BehaviorStrategy.cpp  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  Pathfinding.cpp  Pathfinding.h  Perception.cpp  Perception.h
src/audio/: AudioManager.cpp  AudioManager.h
src/collisions/: CollisionBox.cpp  CollisionBox.h  CollisionDebug.h  CollisionDebug_broken.cpp  CollisionDebug_old.cpp  CollisionEvents.cpp  CollisionEvents.h  CollisionManager.cpp  CollisionManager.h  CollisionSystem.cpp  CollisionSystem.h  SpatialPartition.cpp  SpatialPartition.h  SpatialPartition_backup.cpp
src/core/: AssetManager.cpp  AssetManager.h  ConfigManager.cpp  ConfigManager.h  DesignPatternsDemo.h  FontHelper.cpp  FontHelper.h  Game.cpp  Game.h  GameState.h  Logger.cpp  Logger.h  SaveManager.cpp  SaveManager.h  Timer.cpp  Timer.h
src/debug/: DebugConsole.cpp  DebugConsole.h  DebugOverlay.cpp  DebugOverlay.h
src/entities/: Entity.cpp  Entity.h  EntityDebug.cpp  EntityDebug.h  EntityFactory.cpp  EntityFactory.h  EntityManager.cpp  EntityManager.h  EntityTelemetry.cpp  EntityTelemetry.h  MovementHelper.cpp  MovementHelper.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  Wall.cpp  Wall.h
src/gameplay/: AchievementManager.cpp  AchievementManager.h  GameplayExample.h  InventorySystem.cpp  InventorySystem.h  Item.cpp  Item.h  ItemManager.cpp  ItemManager.h  NoiseSystem.cpp  NoiseSystem.h  NoiseSystem_simple.h  Puzzle.cpp  Puzzle.h  PuzzleManager.cpp  PuzzleManager.h  VisionSystem.cpp  VisionSystem.h  VisionSystem_simple.cpp
src/input/: Action.h  CommandSystem.cpp  CommandSystem.h  InputManager.cpp  InputManager.h
src/scene/: DebugPickupScene.cpp  DebugPickupScene.h  LoadingScene.cpp  LoadingScene.h  MenuScene.cpp  MenuScene.h  PlayScene.cpp  PlayScene.h  SaveIntegration.cpp  SaveIntegration.h  Scene.h  SceneManager.cpp  SceneManager.h
src/ui/: CustomCursor.cpp  CustomCursor.h  InputHelper.cpp  InputHelper.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  OptionsMenu.cpp  OptionsMenu.h  PauseMenu.cpp  PauseMenu.h  SurvivalHUD.cpp  SurvivalHUD.h  UIManager.cpp  UIManager.h
tests/: CMakeLists.txt
tests/ai/: AITests.cpp
tests/collisions/: CollisionTests.cpp
tests/entities/: EntityTests.cpp  EntityTests.h
tests/gameplay/: ItemTests.h  PuzzleTests.h  main.cpp  simple_main.cpp  stubs.cpp
tests/input/: InputManagerTest.cpp
tests/ui/: SceneNavigationTests.cpp
